fixed: boxes with too much content in css

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,7 +1,7 @@
 body {
   padding: 0;
   margin: 0;
-  overflow: hidden;
+  /* overflow: hidden; */
   color: white;
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -15,7 +15,7 @@ h1 {
 }
 .container {
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   background: linear-gradient(30deg, #000 0%, #401959 100%);
   -webkit-animation: adjustHue 6s infinite;
 }
@@ -75,6 +75,16 @@ a {
   justify-content: center;
   align-items: center;
   gap: 20px;
+}
+
+li {
+  transition: 0.6s;  
+
+}
+
+li:hover {
+    font-size: 28.8px;
+    transition: 0.6s;  
 }
 
 @media (max-width: 660px) {
